<resources>
    <string name="app_name">Challenge 7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_movie">Trailer image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fullname">Fullname</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="user">User</string>
    <string name="favorite">Favorite</string>
</resources>